[package]
name = "struct-validator"
version = "0.1.0"
authors = ["Arnau Orriols <dev@arnauorriols.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
paste = "0.1"
derive_more = "0.99"
